css fixes for pagination overflow

--- a/tradejournal/static/content/site.css
+++ b/tradejournal/static/content/site.css
@@ -33,3 +33,18 @@ input[type="checkbox"].input-validation-error {
 .remove-bottom-margin {
     margin-bottom: 0px;
 }
+
+.sr-only {
+    position: absolute;
+    margin: -1px 0 0 -1px;
+    padding: 0;
+    display: block;
+    width: 1px;
+    height: 1px;
+    font-size: 1px;
+    line-height: 1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+    outline: 0;
+    }
